--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,9 @@ customtkinter = "^5.2.1"
 matplotlib = "^3.8.2"
 packaging = "^23.2"
 pillow = "^10.1.0"
+httpx = "^0.26.0"
+tkinterdnd2 = "^0.3.0"
+ctktooltip = "^0.8"
 
 
 [tool.poetry.group.dev.dependencies]
