update vscode parameters to hide __pycache__ folder.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,6 +8,7 @@
     "**/.coverage": true,
     "**/.ruff_cache": true,
     "**/poetry.lock": true,
+    "**/__pycache__": true
   },
   "python.testing.unittestArgs": ["-v", "-s", "./tests", "-p", "test*.py"],
   "python.testing.pytestEnabled": false,
